native/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quick-admin-api
  labels:
    app: quick-admin-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: quick-admin-api
---
apiVersion: v1
kind: Service
metadata:
  name: quick-admin-api-metrics
  labels:
    app: quick-admin-api
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: metrics
  selector:
    app: quick-admin-api
